@startuml

interface Resolution {
    +resolve(ticket: Ticket)
}

class AutomaticResolution
class TechnicalServiceResolution
class SendResidenceResolution

interface Ticket {
    +register()
    +notify()
    +setResolutionStrategy(strategy: Resolution)
    +resolveTicket()
}


AutomaticResolution ..|> Resolution
TechnicalServiceResolution ..|> Resolution
SendResidenceResolution ..|> Resolution
Ticket --> Resolution
@enduml
